Fixed the layout issues when viewing on mobile screens. Some cards were overlapping but now they have been fixed.

--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,8 @@
   float: left;
 }
 
-.card card {
+.card  {
   padding: 2px;
+  padding-top: 10px;
   padding-bottom: 10px;
-  height: 200px;
 }
